# willow

./: .SRCINFO  .gitignore  PKGBUILD  PKGBUILD-git  README.md  SMART_WORKFLOWS_QUICKSTART.md  branding.json  ci-cd.sh  config.json  deploy-dev.sh  download-model.sh  install-dev.sh  willow.install
data/: kws-default-keywords.txt
dbus/: com.github.saim.Willow.xml
gnome-extension/willow@saim/: extension.js  metadata.json  prefs.js  stylesheet.css
gnome-extension/willow@saim/lib/: ConfigManager.js  DbusInterface.js  ListeningOverlay.js  PreferencesWidgets.js  WhisperModelManager.js
gnome-extension/willow@saim/schemas/: org.gnome.shell.extensions.willow.gschema.xml
scripts/: generate-keywords.py  install-service-dev.sh  willow-setup-lib.sh
service/: CMakeLists.txt
service-rs/: Cargo.toml
service-rs/src/: config.rs  main.rs  models.rs  service.rs  tts.rs  types.rs
service-rs/src/audio/: agc.rs  capture.rs  mod.rs  router.rs
service-rs/src/commands/: executor.rs  mod.rs  phrase_index.rs  resolver.rs  worker.rs
service-rs/src/dbus/: mod.rs
service-rs/src/intent/: engine.rs  mod.rs
service-rs/src/llm/: mod.rs
service-rs/src/modes/: mod.rs
service-rs/src/pipeline/: asr.rs  kws.rs  mod.rs  pipeline_impl.rs  provider.rs  speaker.rs  stream_asr.rs  vad.rs  whisper.rs
service-rs/src/workflows/: mod.rs  runtime.rs
service/src/: AudioRouter.cpp  AudioRouter.hpp  CommandExecutor.cpp  CommandExecutor.hpp  CommandIntentResolver.cpp  CommandIntentResolver.hpp  CommandPhraseIndex.cpp  CommandPhraseIndex.hpp  KeywordSpotterEngine.cpp  KeywordSpotterEngine.hpp  ModeWorkers.cpp  ModeWorkers.hpp  ModelPaths.cpp  ModelPaths.hpp  SpeakerVerifier.cpp  SpeakerVerifier.hpp  SpeechPipeline.cpp  SpeechPipeline.hpp  SpeechSegmenter.cpp  SpeechSegmenter.hpp  StreamingASREngine.cpp  StreamingASREngine.hpp  TtsEngine.cpp  TtsEngine.hpp  Types.hpp  TypingStreamWriter.cpp  TypingStreamWriter.hpp  VoiceAssistantService.cpp  VoiceAssistantService.hpp  main.cpp
systemd/: willow.service
